# regelrecht-upload

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Containerfile  compose.yaml  entrypoint.sh  input_for_FAQ.md  pr-description.md
.github/workflows/: container.yml
doc/: dpia.md  implementation-report.md  privacy-statement-nl.md  ux-requirements.md
frontend/: faq.html  index.html  privacy.html  status.html  submit.html  uploader-login.html
frontend/admin/: admin.css  admin.js  calendar.html  dashboard.html  index.html  submissions.html
frontend/css/: style.css
frontend/js/: status.js  submit.js  uploader-auth.js
frontend/uploader/: dashboard.html
frontend/webcomponents/: index.js  rr-button.js  rr-file-upload.js  rr-help-text.js  rr-local-base.js  rr-progress-bar.js  rr-select-field.js  rr-text-field.js  rr-toggle-group.js
src/: config.rs  main.rs
src/db/: mod.rs  pool.rs
src/db/migrations/: 001_initial.sql  003_retention_date.sql  004_uploader_sessions.sql
src/handlers/: admin.rs  auth.rs  calendar.rs  middleware.rs  mod.rs  submissions.rs  uploader_auth.rs
src/models/: mod.rs
src/validation/: mod.rs
