[package]
name = "regelrecht-upload"
version = "0.1.0"
edition = "2021"
description = "Upload portal for RegelRecht policy documents"
authors = ["RegelRecht Team"]
license = "EUPL-1.2"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
argon2 = "0.5"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
sha2 = "0.10"
uuid = { version = "1.7", features = ["v4", "serde"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
hex = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Input validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
